--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "vue": "^2.7.7",
+    "vue-bot-ui": "^0.2.8",
     "vue-router": "^3.5.4"
   },
   "devDependencies": {
